Fix: Add jacoco test coverage and improve coverage