@@ -5,32 +5,34 @@ import com.roadToMaster.UniversityManagerApi.courses.domain.CourseMother;
 import com.roadToMaster.UniversityManagerApi.courses.domain.ScheduleMother;
 import com.roadToMaster.UniversityManagerApi.courses.domain.SubjectMother;
 import com.roadToMaster.UniversityManagerApi.courses.domain.UserMother;
-import com.roadToMaster.UniversityManagerApi.courses.infrastructure.SubjectRequestMother;
+import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.api.dto.SubjectResponse;
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.CourseRepository;
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.ScheduleRepository;
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.SubjectRepository;
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.entity.CoursesEntityMapper;
-import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.entity.SubjectEntity;
+import com.roadToMaster.UniversityManagerApi.shared.infrastructure.api.dto.PageResponse;
 import com.roadToMaster.UniversityManagerApi.users.infrastructure.persistence.UserRepository;
 import com.roadToMaster.UniversityManagerApi.users.infrastructure.persistence.entity.UserEntityMapper;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpEntity;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.persistence.EntityManager;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.tuple;
 
-public class CreateSubjectTest extends ComponentTestBase {
+public class GetSubjectTest extends ComponentTestBase {
 
   private static final String SUBJECT_URL = "/subject";
+
+  private static final ParameterizedTypeReference<PageResponse<SubjectResponse>> subjectResponseReference = new ParameterizedTypeReference<>() {
+  };
 
   @Autowired
   private CoursesEntityMapper entityMapper;
@@ -62,26 +64,25 @@ public class CreateSubjectTest extends ComponentTestBase {
   }
 
   @Test
-  public void ShouldCreateSubject() {
-    var course = entityMapper.courseToDomain(courseRepository.save(entityMapper.courseToEntity(CourseMother.validCourse())), Collections.emptyList());
-    var professor = UserMother.buildValid();
+  public void ShouldGetSubjects() {
+    var courseEntity = courseRepository.save(entityMapper.courseToEntity(CourseMother.validCourse()));
+    var course = entityMapper.courseToDomain(courseEntity, List.of());
+    var userEntity = userRepository.save(userEntityMapper.userToEntity(UserMother.buildValid()));;
+    var professor = userEntityMapper.userToDomain(userEntity);
     var schedules = List.of(ScheduleMother.buildSchedule(0, 10));
-    var expectedSubject = SubjectMother.validSubject(professor, schedules, course);
+    var subjectEntity = subjectRepository.save(entityMapper.subjectToEntity(SubjectMother.validSubject(professor, List.of(), course), courseEntity));
+    var expectedSubject = entityMapper.subjectToDomain(subjectEntity, schedules);
 
-    userRepository.save(userEntityMapper.userToEntity(professor));
-    courseRepository.save(entityMapper.courseToEntity(course));
+    var url = UriComponentsBuilder.fromUriString(SUBJECT_URL)
+        .queryParam("pageNumber", 0)
+        .queryParam("pageSize", 2)
+        .toUriString();
+    var pageResponse = restTemplate.exchange(url, HttpMethod.GET, null, subjectResponseReference);
 
-    var request = SubjectRequestMother.buildSubjectRequest(expectedSubject);
-
-    var response = restTemplate.exchange(SUBJECT_URL, HttpMethod.POST, new HttpEntity<>(request),
-        Void.class, course.getName());
-
-    var savedSubject = subjectRepository.findByProfessorUsername(professor.getUsername());
-    var savedSchedules = scheduleRepository.findBySubjectId(savedSubject.stream().map(SubjectEntity::getId).collect(Collectors.toList()));
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-    assertThat(savedSubject).first().usingRecursiveComparison()
-        .ignoringFields("course", "professor", "schedules", "createdDate", "active", "updatedDate", "id").isEqualTo(expectedSubject);
-    assertThat(savedSchedules.stream().map(entityMapper::scheduleToDomain).collect(Collectors.toList()))
-        .usingRecursiveComparison().ignoringFields("id").isEqualTo(schedules);
+    assertThat(pageResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+    assertThat(pageResponse.getBody().getContent()).first()
+        .usingRecursiveComparison().ignoringFields("id", "professorUsername", "courseId", "schedules").isEqualTo(expectedSubject);
+    assertThat(pageResponse.getBody().getContent()).extracting("professorUsername", "courseId")
+        .contains(tuple(professor.getUsername(), course.getId()));
   }
 }
